# pywho

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  tox.ini
.github/workflows/: auto-merge-dependabot.yml  ci.yml  release.yml
docs/: api.md  changelog.md  contributing.md  index.md  installation.md  usage.md
src/pywho/: __init__.py  __main__.py  _stdlib.py  _terminal.py  cli.py  inspector.py  scan_formatter.py  scanner.py  trace_formatter.py  tracer.py
tests/: test_cli.py  test_formatter.py  test_inspector.py  test_main_module.py  test_scan_formatter.py  test_scanner.py  test_terminal.py  test_trace_formatter.py  test_tracer.py
