[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pywho"
version = "0.3.0"
description = "One command to explain your Python environment, trace imports, and detect shadows."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Ahsan Sheraz", email = "ahsansheraz@gmail.com" },
]
keywords = [
    "python", "environment", "debug", "venv", "virtualenv",
    "interpreter", "diagnostic", "cli", "devtools", "import", "trace",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]

[project.scripts]
pywho = "pywho.cli:main"

[project.urls]
Homepage = "https://github.com/AhsanSheraz/pywho"
Repository = "https://github.com/AhsanSheraz/pywho"
Issues = "https://github.com/AhsanSheraz/pywho/issues"
Changelog = "https://github.com/AhsanSheraz/pywho/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pywho"]

[tool.hatch.build.targets.sdist]
include = ["src/pywho", "README.md", "LICENSE", "CHANGELOG.md"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
strict = true
